# diva_db

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: bones.rs
examples/: bvh.rs  json.rs
src/: lib.rs  py_ffi.rs
src/aet/: io.rs  mod.rs  py_ffi.rs  read.rs
src/bone/: mod.rs  py_ffi.rs  read.rs  tests.rs
src/mot/: mod.rs  py_ffi.rs  tests.rs
src/spr/: io.rs  mod.rs  py_ffi.rs  read.rs
src/tex/: mod.rs  py_ffi.rs  read.rs
