[package]
name = "diva_db"
version = "0.1.0"
authors = ["waelwindows"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
smart-default = "0.5.2"
int-enum = "0.1.0"
log = "0.4.8"
serde = { version="1.0.102", optional=true, features=["derive"]}
cookie-factory = "0.3.0"

[dev-dependencies]
criterion = "0.3.0"
env_logger = "0.7.1"
serde_json = "1.0.41"

[[bench]]
name = "bones"
harness = false
