[package]
name = "diva_db"
version = "0.1.0"
authors = ["waelwindows"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "diva_db"
crate-type = ["lib", "dylib"]

[dependencies]
nom = "5.0.1"
smart-default = "0.5.2"
int-enum = "0.1.0"
log = "0.4.8"
serde = { version="1.0.102", optional=true, features=["derive"]}
cookie-factory = "0.3.0"
nom_ext = { git="https://github.com/Waelwindows/nom_ext" }
pyo3 = { version = "0.13.2", optional = true }

[dev-dependencies]
criterion = "0.3.0"
env_logger = "0.7.1"
serde_json = "1.0.41"
bvh_anim = {version="*", git="https://github.com/Waelwindows/bvh_anim.git"}
mint = "0.5.4"
bstr = "0.2.11"

[[bench]]
name = "bones"
harness = false

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["serde"]
